--- a/LibraryManager.API/appsettings.Development.json
+++ b/LibraryManager.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=itareapeemers;Database=LibraryManager; User = sa; Password = Jetmastersql2025; Trust Server Certificate=True"
   }
 }
