--- a/LibraryManager.Core/LibraryManager.Core.csproj
+++ b/LibraryManager.Core/LibraryManager.Core.csproj
@@ -14,4 +14,9 @@
       <ProjectReference Include="..\LibraryManager.Domain\LibraryManager.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.2" />
+      <PackageReference Include="System.Linq" Version="4.3.0" />
+    </ItemGroup>
+
 </Project>
